Image-Upload-Server

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
+    //For Farooq Server
     "default": "Data Source=.;Initial Catalog=dbFaceBook;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    // For Ahad Server
+   // "default": "Data Source=DESKTOP-NH5LR89;Initial Catalog=dbFaceBook;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
