--- a/APIs/requirements.txt
+++ b/APIs/requirements.txt
@@ -1,5 +1,24 @@
+certifi==2022.12.7
+chardet==3.0.4
+click==8.1.3
+colorama==0.4.6
 Flask==2.2.3
 googletrans==3.1.0a0
+h11==0.9.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2023.1.1
+httpcore==0.9.1
+httpx==0.13.3
+hyperframe==5.2.0
+idna==2.10
+itsdangerous==2.1.2
+Jinja2==3.1.2
+langdetect==1.0.9
+MarkupSafe==2.1.2
 numpy==1.24.2
 opencv-python==4.7.0.72
-langdetect==1.0.9
+rfc3986==1.5.0
+six==1.16.0
+sniffio==1.3.0
+Werkzeug==2.2.2
